style.css
body {
  background-color: lightblue;
  font-family: Arial, sans-serif;
}

h1 {
  color: darkblue;
  text-align: center;
}

p {
  color: green;
  font-size: 20px;
}.dark-mode {
  background-color: black;
  color: white;
}.dark-mode {
  background-color: black;
  color: white;
}


}

